fix: Horizontal scroll on Problem section

--- a/src/blocks/modal/modal.css
+++ b/src/blocks/modal/modal.css
@@ -11,7 +11,7 @@
 	position: fixed;
 	top: 0;
 	left: 0;
-	z-index: 10;
+	z-index: 100;
 	transform: 'translate(-50%, -50%)';
 	/* visibility: hidden; */
 }
