--- a/src/blocks/navbar/navbar.css
+++ b/src/blocks/navbar/navbar.css
@@ -10,6 +10,6 @@
 	justify-content: space-between;
 	/* justify-content: space-around; */
 	position: fixed;
-	z-index: 5;
+	z-index: 3;
 	overflow: hidden;
 }
