--- a/src/blocks/problem/__chart/problem__chart.css
+++ b/src/blocks/problem/__chart/problem__chart.css
@@ -6,4 +6,5 @@
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
+	margin-right: 73px;
 }
