--- a/src/blocks/problem/__container/problem__container.css
+++ b/src/blocks/problem/__container/problem__container.css
@@ -1,2 +1,3 @@
 .problem__container {
+	margin-left: 140px;
 }
