--- a/src/blocks/problem/__info-container/problem__info-container.css
+++ b/src/blocks/problem/__info-container/problem__info-container.css
@@ -1,4 +1,4 @@
 .problem__info-container {
 	display: flex;
-	justify-content: space-between;
+	/* justify-content: space-between; */
 }
