--- a/src/blocks/problem/problem.css
+++ b/src/blocks/problem/problem.css
@@ -13,9 +13,9 @@
 @import url(./__card-text/problem__card-text.css);
 
 .problem {
-	height: 1037px;
+	/* height: 1037px; */
 	background-color: #1c383c;
 	width: 100vw;
-	padding: 120px 140px;
+	padding: 120px 0;
 	/* padding: auto; */
 }
